--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,10 +2,10 @@
 layout: default
 ---
 
-<main id="main_content" class="align-center">
+<main id="main_content">
     <article>
         {%- unless layout.disable_title -%}
-        <h1>{{ page.title | escape }}</h1>
+        <h1 class="align-center">{{ page.title | escape }}</h1>
         {%- endunless -%}
 
         {{ content }}
