Don't unset color of that

--- a/css/style.css
+++ b/css/style.css
@@ -260,6 +260,9 @@ header > :nth-child(1) {
   text-align: center;
   flex-basis: 200px;
 }
+header > :nth-child(1) a:has(#dosbox-x-logo) {
+  display: block;
+}
 header > :nth-child(1) #dosbox-x-logo {
   width: 5.625em;
   height: auto;
@@ -470,9 +473,4 @@ footer p {
 footer a {
   color: #F2F2F2;
   text-decoration: underline;
-}
-
-a:has(#dosbox-x-logo) {
-  display: block;
-  color: unset;
 }
