--- a/_includes/version.html
+++ b/_includes/version.html
@@ -24,7 +24,7 @@
 <h5>
   32/64-bit Setup {% include version_file.html version=version name="winXP_setup_file" display_name=" ReactOS/XP+ " %}
   |
-  <strong>{% include version_file.html version=version name="win64_setup_file" display_name=" Vista+" %}</strong>
+  {% include version_file.html version=version name="win64_setup_file" display_name=" Vista+" %}
   <sup>(Recommended)</sup>
 </h5>
 <h5>
