--- a/_includes/version.html
+++ b/_includes/version.html
@@ -37,7 +37,7 @@
   {% include version_file.html version=version name="win9x_file" display_name=" 9x/NT4+" %}
 </h5>
 <h5>
-  <a href="https://github.com/joncampbell123/dosbox-x/blob/master/INSTALL.md#windows-packages-installer-or-portable">More options including portable packages</a>
+  <a href="https://github.com/joncampbell123/dosbox-x/blob/master/INSTALL.md#windows-packages-installer-or-portable">More options including other portable packages</a>
 </h5>
 
 <h4>Linux version:</h4>
