--- a/css/style.css
+++ b/css/style.css
@@ -397,27 +397,37 @@ table.align-left > tbody > tr > td {
 
 .home-links {
   border: none;
-  margin: 0;
-  margin-left: auto;
-  margin-right: auto;
+  margin: 0 auto;
+  margin-block: 1em;
   border-collapse: separate;
-  border-spacing: 10px 0;
+  border-spacing: 0.625em 0;
 }
 .home-links > thead {
   display: none;
 }
 .home-links > tbody > tr > td {
-  height: 100%;
+  padding: 0;
   border: 0;
   border-radius: 2px;
   box-shadow: 0 0 5px rgba(0,0,0,.5);
-  padding: 10px 15px;
-  text-align: center;
+  vertical-align: middle;
 }
 .home-links > tbody > tr > td > * {
   color: #fff;
   font-weight: 700;
+  text-align: center;
   vertical-align: middle;
+}
+.home-links > tbody > tr > td > a {
+  display: inline-block;
+  height: 100%;
+  margin: 0.5em 1em;
+}
+.home-links > tbody > tr > td > img {
+  height: 1.5em;
+  width: auto;
+  margin: 0;
+  margin-right: 0.75em;
 }
 
 .home-links > tbody > tr > td:has(#linkwiki) {
@@ -428,7 +438,8 @@ table.align-left > tbody > tr > td {
 }
 .home-links > tbody > tr > td:has(#linkproject) {
   background-color: #0090ff;
-  white-space: pre-wrap;
+  display: flex;
+  align-items: center;
 }
 
 h4.release-date {
