Rework header wrapping, more gap to octocat logo

--- a/css/style.css
+++ b/css/style.css
@@ -245,10 +245,12 @@ header {
   background: -o-linear-gradient(top, #373737, #333399);
   background: linear-gradient(to bottom, #373737, #333399);
   margin: 0;
-  padding: 20px 10px;
+  padding: 20px 0;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
+  gap: 2em;
 }
 
 header > * {
@@ -257,7 +259,6 @@ header > * {
 
 header > :nth-child(1) {
   text-align: center;
-  flex-basis: 12.5em;
 }
 header > :nth-child(1) a:has(#dosbox-x-logo) {
   display: block;
@@ -283,14 +284,9 @@ header > :nth-child(2) > :last-child {
   padding-bottom: 0;
 }
 
-@media (max-width: 480px) {
-  header {
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 1em;
-  }
-  header > :nth-child(1) {
-    flex-basis: 90px;
+@media (max-width: 560px) {
+  #project_tagline {
+    display: none;
   }
 }
 
@@ -421,7 +417,7 @@ table.align-left > tbody > tr > td {
   display: flex;
   height: 100%;
   padding: 0.5em 1em;
-  gap: 0.5em;
+  gap: 0.75em;
   flex-wrap: wrap;
   justify-content: center;
 }
