Move favicon to root folder

--- a/_includes/head_common.html
+++ b/_includes/head_common.html
@@ -1,5 +1,5 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<link rel="icon" type="image/x-icon" href="{{ '/images/favicon.ico' | relative_url }}">
+<link rel="icon" type="image/x-icon" href="{{ '/favicon.ico' | relative_url }}">
 <link rel="stylesheet" type="text/css" media="screen" href="{{ '/css/style.css' | relative_url }}">
 <meta name="viewport" content="width=device-width, initial-scale=1">
