Rework version sidebar

--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -14,7 +14,7 @@ layout: default
         {{ content }}
     </article>
 
-    <aside>
+    <aside class="version-sidebar">
         {%- include version.html -%}
     </aside>
 </main>
