Don't use 100vh for reference of html height

--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,7 @@ Theme Styles
 *******************************************************************************/
 
 html {
-  height: 100%;
-  min-height: 100vh;
+  height: 100%; min-height: 100%;
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   box-sizing: border-box;
