--- a/_includes/version.html
+++ b/_includes/version.html
@@ -19,7 +19,7 @@
 <p class="subtitle-mute">(Windows 9x/NT4 and later versions supported)</p>
 <p>
   32/64-bit Setup:
-  {% include version_file.html version=version name="windows_setup_file" display_name="Vista+ " %}
+  {% include version_file.html version=version name="windows_setup_file" display_name="Win7+ " %}
   {% if version.windows_setup_file %}<sup>(Recommended)</sup>{% endif %}
   |
   {% include version_file.html version=version name="winXP_setup_file" display_name="ReactOS/XP+" %}
