macOS mention SDL2 version works on macOS 12+ only

--- a/_includes/version.html
+++ b/_includes/version.html
@@ -50,6 +50,8 @@
   {% include version_file.html version=version name="macos_intel_file" display_name="Intel-based Mac" %}
   |
   {% include version_file.html version=version name="macos_arm_file" display_name="ARM-based Mac" %}
+<br>
+SDL2 version is known to work on macOS 12+ only.
 </p>
 <p>
   {%- if version.macos_special_file -%}
